# Experiment-playground

./: README.md  pyproject.toml
notebook/: autoencoder.ipynb
